# docs/swagger.json
@@ -18,6 +18,30 @@
     "basePath": "/api",
     "paths": {
         "/orders": {
+            "get": {
+                "description": "Get all Orders",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orders"
+                ],
+                "summary": "Get all Orders",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.OrdersResponse"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create an order with the input payload",
                 "consumes": [
@@ -45,7 +69,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/entity.Order"
+                            "$ref": "#/definitions/dto.OrderResponse"
                         }
                     }
                 }
@@ -116,7 +140,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Order"
+                            "$ref": "#/definitions/dto.OrderResponse"
                         }
                     }
                 }
@@ -173,6 +197,23 @@
                 }
             }
         },
+        "dto.ItemResponse": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "item_code": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
+                }
+            }
+        },
         "dto.OrderRequest": {
             "type": "object",
             "required": [
@@ -193,6 +234,40 @@
                 "ordered_at": {
                     "type": "string",
                     "example": "2021-01-01T00:00:00+07:00"
+                }
+            }
+        },
+        "dto.OrderResponse": {
+            "type": "object",
+            "properties": {
+                "customer_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.ItemResponse"
+                    }
+                },
+                "ordered_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.OrdersResponse": {
+            "type": "object",
+            "properties": {
+                "customer_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "item_count": {
+                    "type": "integer"
                 }
             }
         },
